# threveal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  READMEmd  vcpkg.json
.github/workflows/: ci.yml
bpf/: .gitignore  bpf_common.h  migration_tracker.bpf.c
cmake/: BpfHelpers.cmake  FindLibBpf.cmake
docs/: PREREQUISITES.md
include/threveal/analysis/: event_store.hpp
include/threveal/collection/: ebpf_loader.hpp  migration_tracker.hpp  pmu_counter.hpp  pmu_group.hpp  pmu_sampler.hpp
include/threveal/core/: errors.hpp  events.hpp  topology.hpp  types.hpp
src/analysis/: event_store.cpp
src/collection/: .clang-tidy  ebpf_loader.cpp  migration_tracker.cpp  pmu_counter.cpp  pmu_group.cpp  pmu_sampler.cpp
src/core/: events.cpp  topology.cpp
tests/: .clang-tidy
tests/unit/: test_ebpf_loader.cpp  test_errors.cpp  test_event_store.cpp  test_events.cpp  test_migration_tracker.cpp  test_pmu_counter.cpp  test_pmu_group.cpp  test_pmu_sampler.cpp  test_topology.cpp
